--- a/index.html
+++ b/index.html
@@ -3,101 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>weather app</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
-    
-<div class="container">
-    <!-- Display area -->
-    <div class="display">
+    <div class="container">
+        <h1>Project Details</h1>
         <div class="inputArea">
-            <input type="text" placeholder="Enter your location">
-            <button><i class="fa-solid fa-magnifying-glass"></i></button>
+            <input type="text" placeholder="enter project names">
+            <button>Add</button>
         </div>
-        <div class="currentweather">
-            <h5 class="currentCity">Karach</h5>
-            <p class="currentTemp"><span>20</span>°</p>
-            <p class="currentcondition">Snow</p>
-        </div>
+
+        <div class="listArea">
+            <!-- <p>Eggs</p>
+            <div class="editArea">
+                <button class="edit">Edit</button>
+                <button class="delete">Delete</button>
+            </div>
+        </div> -->
     </div>
-
-    <!-- Hourly weather -->
-    <div class="hourlyweather">
-        <div class="portion">
-            <p class="hourlytime">Now</p>
-            <img src="https://cdn-icons-png.flaticon.com/512/1779/1779940.png" alt="" class="hourlyicon">
-            <p class="hourlytemp"><span>20</span>°</p>
-        </div>
-
-        <div class="portion">
-            <p class="hourlytime">Now</p>
-            <img src="https://cdn-icons-png.flaticon.com/512/1779/1779940.png" alt="" class="hourlyicon">
-            <p class="hourlytemp"><span>20</span>°</p>
-        </div>
-
-        <div class="portion">
-            <p class="hourlytime">Now</p>
-            <img src="https://cdn-icons-png.flaticon.com/512/1779/1779940.png" alt="" class="hourlyicon">
-            <p class="hourlytemp"><span>20</span>°</p>
-        </div>
-
-        <div class="portion">
-            <p class="hourlytime">Now</p>
-            <img src="https://cdn-icons-png.flaticon.com/512/1779/1779940.png" alt="" class="hourlyicon">
-            <p class="hourlytemp"><span>20</span>°</p>
-        </div>
-        <div class="portion">
-            <p class="hourlytime">Now</p>
-            <img src="https://cdn-icons-png.flaticon.com/512/1779/1779940.png" alt="" class="hourlyicon">
-            <p class="hourlytemp"><span>20</span>°</p>
-        </div>
-    </div>
-
-
-
-    <div class="dailyweather">
-        <div class="secondPortion">
-            <p class="day">Today</p>
-            <img src="https://cdn-icons-png.flaticon.com/512/1779/1779940.png" alt="" class="dailyicon">
-            <p><span>29</span>°------------ <span>33</span>°</p>
-        </div>
-
-        <div class="secondPortion">
-            <p class="day">Today</p>
-            <img src="https://cdn-icons-png.flaticon.com/512/1779/1779940.png" alt="" class="dailyicon">
-            <p><span>29</span>°------------ <span>33</span>°</p>
-        </div>
-
-        <div class="secondPortion">
-            <p class="day">Today</p>
-            <img src="https://cdn-icons-png.flaticon.com/512/1779/1779940.png" alt="" class="dailyicon">
-            <p><span>29</span>°------------ <span>33</span>°</p>
-        </div>
-
-        <div class="secondPortion">
-            <p class="day">Today</p>
-            <img src="https://cdn-icons-png.flaticon.com/512/1779/1779940.png" alt="" class="dailyicon">
-            <p><span>29</span>°------------ <span>33</span>°</p>
-        </div>
-
-        <div class="secondPortion">
-            <p class="day">Today</p>
-            <img src="https://cdn-icons-png.flaticon.com/512/1779/1779940.png" alt="" class="dailyicon">
-            <p><span>29</span>°------------ <span>33</span>°</p>
-        </div>
-
-        <div class="secondPortion">
-            <p class="day">Today</p>
-            <img src="https://cdn-icons-png.flaticon.com/512/1779/1779940.png" alt="" class="dailyicon">
-            <p><span>29</span>°------------ <span>33</span>°</p>
-        </div>
-
-    </div>
-
-
-</div>
 
     <script src="app.js"></script>
 </body>
